# notion-mcp

./: .env.example  .gitignore  README.md  TROUBLESHOOTING.md  pyproject.toml
src/notion_mcp/: __init__.py  notion_client.py  server.py
